[package]
name = "integra"
version = "0.0.7" 
edition = "2021"
authors = ["SapphoTech"]
description = "Integra is a sleek, elegant, performant web framework for Rust, harnessing the power of the hyper library."
license = "Apache-2.0"
repository = "https://github.com/SapphoTech/Integra/"
readme = "README.MD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
walkdir = "2"
hyper = "0.14"